apps/media/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  ports:
    - port: 5432
  selector:
    app: immich-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  ports:
    - port: 6379
  selector:
    app: immich-redis
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  ports:
    - port: 3003
  selector:
    app: immich-machine-learning
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: immich-server
